--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.8.2"
+    "react-is": "^19.2.0",
+    "react-router": "^7.8.2",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
