--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.68.0",
     "react-is": "^19.2.0",
     "react-router": "^7.8.2",
     "recharts": "^3.5.1"
