--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "check": "biome check .",
     "check:fix": "biome check --write .",
     "preview": "vite preview",
-    "generate:types": "supabase gen types typescript --project-id $VITE_SUPABASE_PROJECT_ID > src/shared/lib/supabase/database.types.ts"
+    "generate:types": "supabase gen types typescript --project-id qrhkrjmqekvxnkgbgvjq > src/shared/lib/supabase/database.types.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.1",
